Fix details title wrap

--- a/starwarswiki/src/style/style.scss
+++ b/starwarswiki/src/style/style.scss
@@ -176,6 +176,7 @@ p {
 		.details-title {
 			display: flex;
 			flex-direction: row;
+			flex-wrap: wrap;
 			align-items: baseline;
 			gap: $margin;
 
